# contracts/openapi_spec.json
@@ -230,6 +230,11 @@
             ],
             "title": "Result Dataset Id"
           },
+          "rows": {
+            "items": {},
+            "title": "Rows",
+            "type": "array"
+          },
           "schema_version": {
             "title": "Schema Version",
             "type": "string"
